# UnknownEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RenderEngineV0.code-workspace  build_linux.sh  build_win.bat  conanfile.py  doc.txt
UnknownEngine/: CMakeLists.txt
UnknownEngine/assets/models/structure/: structure_.gltf
UnknownEngine/assets/models/test/: ball.glb  box.fbx  box_sphere.fbx  plane.fbx  right_hand_axis.fbx  three_boxes.fbx  three_boxes.glb
UnknownEngine/experiment/: CMakeLists.txt  exp.cpp  expVkCreate.hpp  expVkDefines.hpp  expVkDescriptor.hpp  expVkHelper.hpp  expVkPipeline.hpp  misc.cpp  misc.hpp  simpleVK.cpp  simpleVK.hpp
UnknownEngine/experiment/expShader/: CMakeLists.txt  cs_background.comp  fs_MSTest.frag  fs_mesh.frag  fs_skybox.frag  mesh_shader_culling.frag  mesh_shader_culling.mesh  mesh_shader_culling.task  mesh_shader_shared.h  mesh_test.mesh  mesh_test.task  ms_MSTest.mesh  ts_MSTest.task  vs_common.vert  vs_skybox.vert
UnknownEngine/experiment/utils/: container.hpp  handle.hpp  hash.hpp  imageLoader.cpp  imageLoader.hpp  randomGenerator.hpp
UnknownEngine/experiment/vulkan_renderer/: command.cpp  command.hpp  common.hpp  defines.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  deviceResourceAllocator.cpp  deviceResourceAllocator.hpp  enum.hpp  frame.cpp  frame.hpp  image.cpp  image.hpp  memAllocation.cpp  memAllocation.hpp  pipeline.cpp  pipeline.hpp  renderGraph.cpp  renderGraph.hpp  renderObject.cpp  renderObject.hpp  renderPass.cpp  renderPass.hpp  resource.cpp  resource.hpp  resourceAllocator.cpp  resourceAllocator.hpp  shader.cpp  shader.hpp  sstring.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  types.hpp  vkcore.cpp  vkcore.hpp  vma.cpp  (+1 more)
UnknownEngine/scene/: scene_default.json
UnknownEngine/shaders/: CMakeLists.txt  colored_triangle_mesh.vert  common.vert  gradient.comp  input_structures.glsl  mesh.frag  mesh.vert  mesh_shader_culling.task  phong_fs.glsl  phong_vs.glsl  sky.comp  test_fs.glsl  test_vs.glsl  toy.frag
UnknownEngine/source/project/UNIT_TESTS/: test_ecs.cpp  test_structure.cpp
UnknownEngine/source/project/app/: api_application.hpp  application.cpp  application.hpp  engine.cpp  engine.hpp  getApp.cpp  getApp.hpp  main.cpp  stringTable.cpp  stringTable.hpp
UnknownEngine/source/project/asset/: asset.hpp  assetManager.cpp  assetManager.hpp  assets.hpp  mesh.hpp  modelLoader.cpp  modelLoader.hpp  resourceManager.cpp  resourceManager.hpp  textureLoader.cpp  textureLoader.hpp
UnknownEngine/source/project/asset/utils/: assimpHelper.cpp  assimpHelper.hpp  utils.hpp
UnknownEngine/source/project/configuration/: globalValues.cpp  globalValues.hpp
UnknownEngine/source/project/context/: engineContext.hpp
UnknownEngine/source/project/core/: base.hpp  bit.hpp  clock.cpp  clock.hpp  handles.hpp  hash.cpp  hash.hpp  input.cpp  input.hpp  keys.hpp  math.cpp  math.hpp  singleton.hpp  structure.hpp
UnknownEngine/source/project/core/structure/: graph.hpp
UnknownEngine/source/project/debug/: log.cpp  log.hpp
UnknownEngine/source/project/define/: enums.hpp
UnknownEngine/source/project/ecs/: component.hpp  componentManager.hpp  ecs.cpp  ecs.hpp  ecsHelper.hpp  ecsdefines.hpp  entity.hpp  entityManager.hpp  family.hpp  mask.hpp  resource.hpp  system.hpp  systemManager.hpp
UnknownEngine/source/project/ecs/components/: cameraComponent.hpp  dynamicComponent.hpp  inputControllerComponent.hpp  lifeStateComponent.hpp  transformComponent.hpp
UnknownEngine/source/project/ecs/entities/: actorEntity.hpp
UnknownEngine/source/project/ecs/systems/: cameraSystem.hpp  inputControllerSystem.hpp  movementSystem.hpp
UnknownEngine/source/project/framework/: framework.cpp  framework.hpp
UnknownEngine/source/project/memory/: allocator.cpp  allocator.hpp  resource.hpp
UnknownEngine/source/project/object/: camera.hpp  iobject.hpp
UnknownEngine/source/project/platform/: type.hpp
UnknownEngine/source/project/renderer/: api_interface.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  rendererHandles.cpp  rendererHandles.hpp  type.hpp
UnknownEngine/source/project/renderer/gui/: simpleGUI.cpp  simpleGUI.hpp
UnknownEngine/source/project/renderer/material/: materialManager.cpp  materialManager.hpp  materials.cpp  materials.hpp
UnknownEngine/source/project/renderer/opengl/: api_opengl.hpp
UnknownEngine/source/project/renderer/opengl/output/: api_opengl
UnknownEngine/source/project/renderer/renderSystem/: meshComponent.hpp  preprocessSystem.cpp  preprocessSystem.hpp  renderSystem.cpp  renderSystem.hpp  skyboxComponent.hpp
UnknownEngine/source/project/renderer/vulkan/: api_vulkan.cpp  api_vulkan.hpp  vkCore.cpp  vkCore.hpp  vkDescriptor.cpp  vkDescriptor.hpp  vkInitializer.cpp  vkInitializer.hpp  vkPipeline.cpp  vkPipeline.hpp  vkResource.cpp  vkResource.hpp  vkTypes.hpp  vkUtils.cpp  vkUtils.hpp
UnknownEngine/source/project/serialization/: jsonSerializer.cpp  jsonSerializer.hpp
UnknownEngine/source/project/world/: scene.cpp  scene.hpp  world.cpp  world.hpp
UnknownEngine/tests/: CMakeLists.txt
UnknownEngine/tests/handle/: CMakeLists.txt  test_handle.cpp
UnknownEngine/tests/mem/: CMakeLists.txt  mem.cpp
UnknownEngine/tests/scene/: CMakeLists.txt  test_scene.cpp
UnknownEngine/tests/structure/: CMakeLists.txt  test_structure.cpp
profile/: debian_release  windows_debug  windows_release
